fix overflow

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,6 +7,7 @@ $link-color: #308ca8
 
 body 
   font-family: $font-family
+  overflow-y: scroll
 
   a
     color: $link-color
